--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,8 +24,11 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
+      - name: Install Playwright Chromium
+        run: npx playwright install --with-deps chromium
+
       - name: Build Slidev
-        run: CI=true npx slidev build --base /slidev/
+        run: npx slidev build --base /slidev/
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
