--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,6 +24,9 @@ jobs:
       - name: Install dependencies
         run: npm install
 
+      # - name: Install Playwright Browsers
+      #   run: npm i -D playwright-chromium
+
       - name: Build Slidev
         env:
           SLIDEV_EXPORT: none
